# jdissupreme

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
jdissupreme/: __init__.py  jdissupreme.py
