[metadata]
name = jdissupreme
version = 1.0.0
url = https://github.com/jwright159/jdissupreme
author = Jade Wright
author_email = iamjwright159@gmail.com
description = A worse Discord library
long_description = file: README.md

[options]
packages = jdissupreme
install_requires =
	aiohttp
include_package_data = True